Termino de Estilos

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="./css/styles.css">
         <script src="https://kit.fontawesome.com/7acdaf5c78.js" crossorigin="anonymous"></script>
-        <title>Kevin Romero - Portafolio</title>
+        <title>Kevin Romero - Profesional Portfolio</title>
     </head>
     <body>
         <header class="header">
-            <a href="#" class="logo">Kevin</a>
+            <a href="./index.html" class="logo">Kevin</a>
             <i class="fa-solid fa-bars" id="menu-icon"></i>
             <nav class="navbar">
                 <a href="#about">about me</a>
-                <a href="#proyectos">proyects</a>
+                <a href="#proyects">proyects</a>
                 <a href="#skills">skills</a>
-                <a href="#contacto">contact</a> 
+                <a href="#contact">contact</a> 
             </nav>
         </header>
         <main>
@@ -34,8 +34,8 @@
                         <p>Passionate Front End Web Designer with a deep love for aesthetics and functionality. I believe in fusing beauty with usability to create exceptional online experiences. Ready to bring creativity and passion to every project I tackle.</p>
                     </div>
                     <div class="btn-box">
-                        <a href="#" class="btn">hire me</a>
-                        <a href="#" class="btn">let's talk</a>
+                        <a href="#proyects" class="btn">hire me</a>
+                        <a href="#contact" class="btn">let's talk</a>
                     </div>
                 </div>
                 <div class="about-sci">
@@ -44,26 +44,123 @@
                 </div>
                 <div class="about-imgHover"></div>
             </section>
-            <!--<section id="proyectos">
-                <h3>Mis Poyectos</h3>
+            <section class="proyects" id="proyects">
+                <h2 class="heading">My <span>Proyects</span></h2>
+                <div class="proyects-box">
+                    <div class="proyects-content">
+                        <div class="content">
+                            <a href="https://github.com/kevinromero18/CursoJavaScript.git">
+                                <div class="year">
+                                    <i class="fa-solid fa-calendar-days"></i>
+                                    <p class="date">Jun/2023 - Aug/2023</p>
+                                    <p class="description">This project is a commercial website for the sale of sports shoes, which has different pages where the user can navigate and thus be able to access products, from which, if desired, they can make a purchase.</p>
+                                    <img src="./multimedia/img/favicon.jpg" alt="logoimportadosoport">
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </section>
-            <section id="skills">
-                <h3>Skills</h3>
-                <i class="fa-brands fa-css3-alt"></i>
-                <i class="fa-brands fa-html5"></i>
-                <i class="fa-brands fa-square-js"></i>
-                <i class="fa-brands fa-bootstrap"></i>
-                <i class="fa-brands fa-sass"></i>
-                <i class="fa-brands fa-square-git"></i>
-            </section>!-->
+            <section class="skills" id="skills">    
+                <h2 class="heading">My <span>Skills</span></h2>
+                <div class="skills-row">
+                    <div class="skills-column">
+                        <h3 class="title">Coding Skills</h3>
+                        <div class="skills-box">
+                            <div class="skills-content">
+                                <div class="progress">
+                                    <h3>HTML5 <span>90%</span></h3>
+                                    <div class="bar"><span></span></div>
+                                </div>
+                                <div class="progress">
+                                    <h3>CCS3 <span>80%</span></h3>
+                                    <div class="bar"><span></span></div>
+                                </div>
+                                <div class="progress">
+                                    <h3>SASS <span>90%</span></h3>
+                                    <div class="bar"><span></span></div>
+                                </div>
+                                <div class="progress">
+                                    <h3>Git <span>70%</span></h3>
+                                    <div class="bar"><span></span></div>
+                                </div>
+                                <div class="progress">
+                                    <h3>GitHub <span>90%</span></h3>
+                                    <div class="bar"><span></span></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skills-column">
+                        <h3 class="title">Coding Skills</h3>
+                        <div class="skills-box">
+                            <div class="skills-content">
+                                <div class="progress">
+                                    <h3>JavaScript <span>85%</span></h3>
+                                    <div class="bar"><span></span></div>
+                                </div>
+                                <div class="progress">
+                                    <h3>ReactJs <span>40%</span></h3>
+                                    <div class="bar"><span></span></div>
+                                </div>
+                                <div class="progress">
+                                    <h3>POO <span>85%</span></h3>
+                                    <div class="bar"><span></span></div>
+                                </div>
+                                <div class="progress">
+                                    <h3>PHP <span>60%</span></h3>
+                                    <div class="bar"><span></span></div>
+                                </div>
+                                <div class="progress">
+                                    <h3>NodeJs <span>35%</span></h3>
+                                    <div class="bar"><span></span></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="contact" id="contact">
+                <h2 class="heading">Contact <span>Me!</span></h2>
+                <form action="#">
+                    <div class="input-box">
+                        <div class="input-field">
+                            <input class="input" type="text" placeholder="Full Name" required>
+                            <span class="focus"></span>
+                        </div>
+                        <div class="input-field">
+                            <input class="input" type="text" placeholder="Email Adress" required>
+                            <span class="focus"></span>
+                        </div>
+                    </div>
+                    <div class="input-box">
+                        <div class="input-field">
+                            <input class="input" type="number" placeholder="Mobile Number" required>
+                            <span class="focus"></span>
+                        </div>
+                        <div class="input-field">
+                            <input class="input" type="text" placeholder="Email Subject" required>
+                            <span class="focus"></span>
+                        </div>
+                    </div>
+                    <div class="textarea-field">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+                        <span class="focus"></span>
+                    </div>
+                    <div class="btn-box">
+                        <button type="submit" class="btn">submit</button>
+                    </div>
+                </form>
+            </section>
         </main>
         <footer>
-            <!--<section id="contacto">
-                <h3>Contáctame</h3>
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-instagram"></i>
-            </section>!-->
+            <div class="footer-text">
+                <p>Copyrigth &copy; 2023 Kevin Romero | All Rigths Reserved</p>
+            </div>
+            <div class="footer-iconTop">
+                <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
+            </div>
         </footer>
+        <script src="./scripts/main.js"></script>
     </body>
 </html>
